--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.16.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1",
