--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.16.3"
