--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "phosphor-react": "^1.4.1",
     "react": "^18",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "viem": "^2.16.3"
   },
   "devDependencies": {
