--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-currency-input-field": "^3.8.0",
@@ -14,9 +16,11 @@
     "viem": "^2.16.3"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@vitejs/plugin-react": "^1",
     "autoprefixer": "^10",
     "daisyui": "^4",
+    "hardhat": "^2.22.6",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vite": "^4"
